Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24927

deleteLater() called to QMediaPlayer from its signal handler does not work as expected

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.0.0
    • 5.0.0
    • Multimedia
    • None
    • Ubuntu 11.04 X86 32-bit

    Description

      When deleteLater() is called to QMediaPlayer object from a slot attached to the player's mediaStatusChanged signal the player is not deleted next time the event loop spins.

      The attached test case added to qtmultimedia/tests/auto/integration/qmediaplayerbackend reproduces the problem.

      This issue has the same root cause as https://bugreports.qt-project.org/browse/QTBUG-18434. The QMediaPlayer::mediaStatusChanged signal is eventually emitted directly from a GStreamer/GLib message callback, not from Qt event loop.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mgoddard Michael Goddard (closed Nokia identity) (Inactive)
            srosenda Sami Rosendahl
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes